platform/interfaces/flowise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowise-ingress
  namespace: flowise
spec:
  rules:
  - host: flowise.127.0.0.1.sslip.io
    http:
      paths:
      - backend:
          service:
            name: flowise-service
            port:
              number: 80
        path: /
        pathType: Prefix
